fix(mobile) Removed mute icon from nav bar on mobile

--- a/frontend/src/components/Navigation/Navigation.scss
+++ b/frontend/src/components/Navigation/Navigation.scss
@@ -701,7 +701,6 @@
       }
     }
 
-    .mute-button,
     .fullscreen-button {
       padding: 4px;
 
